@@ -1,23 +1,25 @@
 <div class="form-group">
   <%= f.label :name, "お名前" %>
-  <%= f.text_field :name, class: "form-control", style: "width: 300px" %>
+  <%= f.text_field :name, class: "form-control", style: "width: 300px",
+    "v-model" => "user.name" %>
 </div>
 <div class="form-group">
   <%= f.label :language, "もっとも得意なプログラミング言語" %>
   <div>
     <label>
-      <%= f.radio_button :language, "ruby" %> Ruby
+      <%= f.radio_button :language, "ruby", "v-model" => "user.language" %> Ruby
     </label>
     <label>
-      <%= f.radio_button :language, "php" %> PHP
+      <%= f.radio_button :language, "php", "v-model" => "user.language" %> PHP
     </label>
     <label>
-      <%= f.radio_button :language, "other" %> その他
+      <%= f.radio_button :language, "other", "v-model" => "user.language" %> その他
     </label>
   </div>
 </div>
-<div class="form-group">
+<div class="form-group" v-show="user.language === 'other'">
   <%= f.label :other_language, "（具体的に）" %>
   <%= f.text_field :other_language,
-    style: "display: inline; width: auto", class: "form-control" %>
+    style: "display: inline; width: auto", class: "form-control",
+    "v-model" => "user.other_language" %>
 </div>
