@@ -10,3 +10,5 @@
     <% end %>
   </div>
 </div>
+
+<%= javascript_pack_tag "users/form" %>
